--- a/src/Block.css
+++ b/src/Block.css
@@ -1,12 +1,29 @@
 .Block__body {
   position: absolute;
+  top: -25px;
+  left: -25px;
 
+  display: flex;
   width: 50px;
   height: 50px;
   border-radius: 3px;
 
-  text-align: center;
+  align-items: center;
+  justify-content: center;
   background: #eee;
 
+  opacity: 0.9;
+  z-index: 10;
+}
+
+.Block__body span {
+  font-size: 24px;
+  opacity: 0.6;
+}
+.Block__arrows {
   opacity: 0.5;
+}
+
+.Block__body:hover ~ .Block__arrows {
+  opacity: 1;
 }
