--- a/src/DagDisplay.css
+++ b/src/DagDisplay.css
@@ -30,6 +30,5 @@
 .DagDisplay__arrowGroup:hover .Arrow__line,
 .DagDisplay__arrowGroup:hover .Arrow__head {
   background: rgb(0,128,255);
-  box-shadow: 0 0 1px 1px rgba(0,128,255, 0.3);
-
+  box-shadow: 0 0 1px 0 rgba(0,128,255, 0.3);
 }
