--- a/src/DagDisplayBlock.css
+++ b/src/DagDisplayBlock.css
@@ -1,7 +1,4 @@
-.Block__body {
-
-}
-.Block__body {
+.DagDisplay__Block__body {
   position: absolute;
   transform: translate(-20px, -20px); /* BLOCK_HALF_SIZE This translate is to move the 0,0 origin to the center of the block. */
 
@@ -9,21 +6,20 @@
   width: 40px;
   height: 40px;
   border-radius: 3px;
+  box-sizing: border-box;
 
   align-items: center;
   justify-content: center;
   background: #eee;
+  border: 1px solid rgba(0,0,0,0.7);
 
-  opacity: 0.9;
+  cursor: default;
+  opacity: 0.95;
+}
+.DagDisplay__Block:hover .DagDisplay__Block__body {
+  border: 1px solid rgb(0,128,255);
 }
 
-.Block__body span {
+.DagDisplay__Block__body span {
   font-size: 16px;
-}
-.Block__arrows {
-  opacity: 1;
-}
-
-.Block__body:hover ~ .Block__arrows {
-  opacity: 1;
 }
