--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,17 @@
 .App {
-  text-align: center;
   font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
 }
 
 
 .App-header {
   background-color: #222;
-  height: 150px;
   padding: 20px;
   color: white;
+}
+.App-header button {
+  font-size: 24px;
+  margin: 10px;
+
 }
 
 .App-title {
